# lsst-io-analysis

./: README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
src/lsstioanalysis/: ingest.py  project.py  utils.py
src/lsstioanalysis/cli/: main.py
