[metadata]
name = lsstioanalysis
description = Analysis of the holdings in lsst.io.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = jsick@lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/lsst-sqre/lsst-io-analysis
project_urls =
    Source code = https://github.com/lsst-sqre/lsst-io-analysis
    Issue tracker = https://github.com/lsst-sqre/lsst-io-analysis/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Environment :: Console
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    = src
setup_requires =
  setuptools_scm
install_requires =
    typer

[options.packages.find]
where = src
exclude =
    docs
    tests

[options.extras_require]
dev =
    mypy

[options.entry_points]
console_scripts =
    lsstioanalysis = lsstioanalysis.cli.main:app

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP 8
# W503: line break after binary operator, flake8 disagrees with PEP 8
ignore = E203, W503
exclude =
  docs/conf.py,
  */__init__.py

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
